--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "ai-voice-gateway",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Voice gateway between Twilio and OpenAI Realtime API for Cars & Keys assistant",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.16.3",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "prisma": "^6.16.3",
-    "twilio": "^5.10.2",
-    "ws": "^8.18.3"
-  }
+    "express": "^4.18.2",
+    "ws": "^8.15.0",
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "license": "MIT"
 }
