--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
-{
+k{
   "name": "ai-voice-gateway",
   "version": "1.0.0",
-  "description": "Voice gateway between Twilio and OpenAI Realtime API for Cars & Keys assistant",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.15.0",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "license": "MIT"
+    "@fastify/websocket": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.28.1",
+    "ws": "^8.18.0"
+  }
 }
