Accept Twilio urlencoded with charset; fix 415

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "ai-voice-gateway",
   "version": "1.0.0",
-  "type": "commonjs",
+  "description": "AI Voice Gateway for Twilio + OpenAI Realtime",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@fastify/websocket": "^10.0.1",
-    "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
-    "ws": "^8.18.0"
+    "@fastify/formbody": "^8.0.0",
+    "fastify": "^5.0.0",
+    "ws": "^8.0.0",
+    "dotenv": "^16.0.0"
   }
 }
