Stable μ-law realtime bridge: fixed commits, removed invalid VAD

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@fastify/formbody": "^8.0.0",
+    "dotenv": "^16.0.0",
     "fastify": "^5.0.0",
-    "ws": "^8.0.0",
-    "dotenv": "^16.0.0"
+    "ws": "^8.0.0"
   }
 }
